--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=d5cc273f2db519e7507f",
+    "/css/app.css": "/css/app.css?id=d81a16c7feabe556b8c8"
 }
